--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -131,15 +131,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pz_server = PzServer(token=\"6c5035393d4153b1996481092e31578130f9f8a3\", host=\"pz-dev\") # temporary host for test phase  "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -204,6 +195,7 @@
    "metadata": {},
    "source": [
     "---\n",
+    "### Data products \n",
     "Display all data products available (WARNING: this list can rapdly grow during the survey's operation). "
    ]
   },
@@ -233,7 +225,7 @@
    "outputs": [],
    "source": [
     "pz_server.display_products_list(filters={\"release\": \"LSST DP0\", \n",
-    "                                 \"product_type\": \"Spec-z Catalog\",\n",
+    "                                 \"product_type\": \"Training Set\",\n",
     "                                 \"uploaded_by\": \"Gschwend\"})"
    ]
   },
@@ -308,11 +300,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The metadata of a given data product is the information provided by the user on the upload form. This information is attached to the data product contents and is available for consulting on the PZ Server page or using the Python API. All data products stored on PZ Server are identified by a unique number, the product **id** number, or by a _string_ called **internal_name**, which is created automatically by concatenating the product **id** to the product name given by its owner (and removing blank spaces, upper cases, and special charecters). \n",
+    "The metadata of a given data product is the information provided by the user on the upload form. This information is attached to the data product contents and is available for consulting on the PZ Server page or using this Python API (`pz-server-lib`).\n",
     "\n",
-    "The `PzServer`'s method `get_product_metadata()` returns a dictionary with the attibutes stored in the PZ Server about a given data product identified by its **id** number or **internal_name**. For use in a Jupyter notebook, the equivalent `display_product_metadata()` shows the results in a formated table.\n",
+    "All data products stored on PZ Server are identified by a unique name, a _string_ called **internal_name**, which is created automatically at the moment of the upload by concatenating the product name given by its owner (and removing blank spaces, upper cases, and special charecters) to a randomly generated hash. \n",
     "\n",
-    "In the example below, remove # to try out different ways of providing the product id. "
+    "One way to share a data product with othes PZ Server users is to provide the product's URL:\n",
+    "\n",
+    "https://pz-server.linea.org.br/product/<internal_name> \n",
+    "\n",
+    "or, if still in the development phase, \n",
+    "\n",
+    "https://pz-server-dev.linea.org.br/product/<internal_name> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `PzServer`'s method `get_product_metadata()` returns a dictionary with the attibutes stored in the PZ Server about a given data product identified by its **internal_name**. For use in a Jupyter notebook, the equivalent `display_product_metadata()` shows the results in a formated table."
    ]
   },
   {
@@ -321,11 +326,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# metadata_specz_catalog = pz_server.display_product_metadata(<id number or internal name, str or int>) \n",
-    "# metadata_specz_catalog = pz_server.display_product_metadata(8) \n",
-    "# metadata_specz_catalog = pz_server.display_product_metadata(\"8\")  \n",
-    "metadata_specz_catalog = pz_server.display_product_metadata(\"8_dp0_tiny_ztrue\") \n",
-    "metadata_specz_catalog"
+    "# pz_server.display_product_metadata(<internal name (str)>) \n",
+    "pz_server.display_product_metadata(\"simple_training_set_Uch3wIA\") "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As in the previous examples, to attribute the metadata of a data product (as a dictionary) to a variable, just replace the preffix \"display_\" by \"get_\", like this:  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metadata_dic = pz_server.get_product_metadata(\"simple_training_set_Uch3wIA\") \n",
+    "metadata_dic"
    ]
   },
   {
@@ -343,7 +362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To download any data product stored in the PZ Server, use the `PzServer`'s method `download_product` informing the produtc's **id** number (or **internal_name**) and pathe to where it will be saved (default is the current directory). This method downloads a compressed .zip file which contais all the files uploaded by the user, including data, anmciliary files and description files. Let's try it with a small data product. "
+    "To download any data product stored in the PZ Server, use the `PzServer`'s method `download_product` informing the product's **internal_name** and the path to where it will be saved (the default is the current directory). This method downloads a compressed .zip file which contais all the files uploaded by the user, including data, anciliary files and description files. Let's try it with a small data product. "
    ]
   },
   {
@@ -352,7 +371,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.download_product(8, save_in=\".\")"
+    "#pz_server.download_product(\"gama_specz_subsample_sE\", save_in=\".\")"
    ]
   },
   {
@@ -378,7 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "specz_catalog = pz_server.get_product(8)"
+    "#specz_catalog = pz_server.get_product(\"gama_specz_subsample_sE\")"
    ]
   },
   {
@@ -590,7 +609,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.display_products_list(filters={\"product_type\": \"Training Set\"})"
+    "#pz_server.display_products_list(filters={\"product_type\": \"Training Set\"})"
    ]
   },
   {
@@ -606,8 +625,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata_train_set = pz_server.get_product_metadata(9)\n",
-    "pz_server.display_product_metadata(\"14_goldenspike_train\") "
+    "#metadata_train_set = pz_server.get_product_metadata(9)\n",
+    "#pz_server.display_product_metadata(\"14_goldenspike_train\") "
    ]
   },
   {
@@ -682,7 +701,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.display_products_list(filters={\"product_type\": \"Validation Results\"})"
+    "#pz_server.display_products_list(filters={\"product_type\": \"Validation Results\"})"
    ]
   },
   {
@@ -698,7 +717,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.display_product_metadata(\"21_pz_validation_goldenspike_fzboost\")"
+    "#pz_server.display_product_metadata(\"21_pz_validation_goldenspike_fzboost\")"
    ]
   },
   {
@@ -716,7 +735,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.get_product(21)#, save_in=\".\")"
+    "#pz_server.get_product(21)#, save_in=\".\")"
    ]
   },
   {
@@ -725,7 +744,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.download_product(21, save_in=\".\")"
+    "#pz_server.download_product(21, save_in=\".\")"
    ]
   },
   {
@@ -764,9 +783,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pz",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pz"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
