--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -22,16 +22,18 @@
    "source": [
     "<a class=\"anchor\" id=\"contents\"></a>\n",
     "#### Notebook contents\n",
-    "\n",
-    "- [Introduction](#intro) \n",
-    "- [Get basic info from PZ Server](#basic-info)\n",
-    "- [How to display the metadata of a data product](#metadata)\n",
-    "- [How to download data products as .zip files](#download-zip)  \n",
-    "- [How to retrieve contents of data products (work on memory)](#retrieve-contents)\n",
-    "    - [Spec-z Catalogs](#spec)\n",
-    "    - [Training Sets](#train)\n",
-    "    - [Photo-z Validation Results](#valid)\n",
-    "    - [Photo-z Tables](#pz_tables)"
+    "- PZ Server\n",
+    "    - [Introduction](#intro) \n",
+    "    - [Upload](#upload)\n",
+    "- PZ Server API (Python library pz-server-lib)\n",
+    "    - [Get basic info from PZ Server](#basic-info)\n",
+    "    - [How to display the metadata of a data product](#metadata)\n",
+    "    - [How to download data products as .zip files](#download-zip)  \n",
+    "    - [How to retrieve contents of data products (work on memory)](#retrieve-contents)\n",
+    "        - [Spec-z Catalogs](#spec)\n",
+    "        - [Training Sets](#train)\n",
+    "        - [Photo-z Validation Results](#valid)\n",
+    "        - [Photo-z Tables](#pz_tables)"
    ]
   },
   {
@@ -55,6 +57,29 @@
     "The Photo-z (PZ) Server is an online service available for the LSST Community to host and share lightweight photo-z related data products. The upload and download of data and metadata can be done at the website [pz-server.linea.org.br](https://pz-server.linea.org.br/) (during the development phase, a test environment is available at [pz-server-dev.linea.org.br](https://pz-server-dev.linea.org.br/). There, you will find two separate pages containing a list of data products each: one for LSST Data Management's oficial data products, and other for user-generated data products. **The registered data products can also be accessed directly from Python code using the PZ Server's data access API, as demonstrated below.**\n",
     "\n",
     "The PZ Server is developed and delivered as part of the in-kind contribution program BRA-LIN, from LIneA to the Rubin Observatory's LSST. The service is hosted in the Brazilian IDAC, not directly connected to the [Rubin Science Platform (RSP)](https://data.lsst.cloud/). However, it requires RSP credentials for user's authentication. For a comprehensive documentation about the PZ Server, please visit the [PZ Server's documentation page](https://linea-it.github.io/pz-lsst-inkind-doc/). There, you will find also an overview of all LIneA's contributions related to Photo-zs. The internal documentation of the API functions is available on the [API's documentation page](https://linea-it.github.io/pz-server-lib/html/index.html).  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How to upload a data product to the PZ Server\n",
+    "\n",
+    "To upload a data product, click on the button **NEW PRODUCT** on the top left of the **User-generated Data Products** page and fill in the Upload Form with relevant metadata.\n",
+    "\n",
+    "The photo-z-related products are organized into five categories (product types):\n",
+    "\n",
+    "- **Spec-z Catalog:** Catalog of spectroscopic redshifts and positions (usually equatorial coordinates).\n",
+    "- **Training Set:** Training set for photo-z algorithms (tabular data). It usually contains magnitudes, errors, and true redshifts.\n",
+    "- **Photo-z Validation Results:** Results of a photo-z validation procedure (free format). Usually contains photo-z estimates (single estimates and/or pdf) of a validation set, photo-z validation metrics, validation plots, etc.\n",
+    "- **Photo-z Table:** Results of a photo-z estimation procedure. Ideally in the same format as the photo-z tables delivered by the DM as part of the LSST data releases. If the data is larger than the file upload limit (200MB), the product entry stores only the metadata (and instructions on accessing the data should be provided in the description field)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The PZ Server API (Python library pz-server-lib)"
    ]
   },
   {
