--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -24,7 +24,7 @@
     "#### Notebook contents\n",
     "- PZ Server\n",
     "    - [Introduction](#intro) \n",
-    "    - [Upload](#upload)\n",
+    "    - [How to upload a data product to the PZ Server](#upload)\n",
     "- PZ Server API (Python library pz-server-lib)\n",
     "    - [Get basic info from PZ Server](#basic-info)\n",
     "    - [How to display the metadata of a data product](#metadata)\n",
@@ -42,10 +42,9 @@
     "tags": []
    },
    "source": [
-    "<div style=\"text-align: right\"><a href=\"#contents\">back to the top</a></div> \n",
     "<a class=\"anchor\" id=\"intro\"></a>\n",
-    "\n",
-    "## Introduction "
+    "# PZ Server\n",
+    "## Introduction \n"
    ]
   },
   {
@@ -63,7 +62,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a class=\"anchor\" id=\"upload\"></a>\n",
     "### How to upload a data product to the PZ Server\n",
+    "<div style=\"text-align: right\"><a href=\"#contents\">back to the top</a></div> \n",
     "\n",
     "To upload a data product, click on the button **NEW PRODUCT** on the top left of the **User-generated Data Products** page and fill in the Upload Form with relevant metadata.\n",
     "\n",
@@ -79,7 +80,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The PZ Server API (Python library pz-server-lib)"
+    "# The PZ Server API (Python library pz-server-lib)\n",
+    "<div style=\"text-align: right\"><a href=\"#contents\">back to the top</a></div> "
    ]
   },
   {
@@ -156,13 +158,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pz_server = PzServer(token=\"1a08b1340c201c8f58c90e9fa9260effbd649439\", host=\"pz-dev\") # temporary host for test phase  "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"text-align: right\"> <a href=\"#contents\">back to the top</a> </div> \n",
     "<a class=\"anchor\" id=\"basic-info\"></a>\n",
-    "\n",
-    "## Get basic info from PZ Server"
+    "## Get basic info from PZ Server\n",
+    "<div style=\"text-align: right\"> <a href=\"#contents\">back to the top</a> </div> "
    ]
   },
   {
@@ -313,12 +323,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"text-align: right\">  <a href=\"#contents\">back to the top</a> </div> \n",
     "<a class=\"anchor\" id=\"metadata\"></a>\n",
-    "\n",
     "## How to display the metadata of a data product\n",
-    "\n",
-    "    "
+    "<div style=\"text-align: right\">  <a href=\"#contents\">back to the top</a> </div>     "
    ]
   },
   {
@@ -376,11 +383,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"text-align: right\">  <a href=\"#contents\">back to the top</a> </div> \n",
-    "\n",
     "<a class=\"anchor\" id=\"download-zip\"></a>\n",
     "## How to download data products as .zip files\n",
-    "    "
+    "<div style=\"text-align: right\">  <a href=\"#contents\">back to the top</a> </div>     "
    ]
   },
   {
@@ -396,17 +401,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pz_server.download_product(\"gama_specz_subsample_sE\", save_in=\".\")"
+    "pz_server.download_product(\"gama_specz_subsample_sE\", save_in=\".\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"text-align: right\"> <a href=\"#contents\">back to the top</a> </div>     \n",
     "<a class=\"anchor\" id=\"retrieve-contents\"></a>\n",
-    "\n",
-    "## How to retrieve contents of data products (work on memory)"
+    "## How to retrieve contents of data products (work on memory)\n",
+    "<div style=\"text-align: right\"> <a href=\"#contents\">back to the top</a> </div>     "
    ]
   },
   {
@@ -422,7 +426,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#specz_catalog = pz_server.get_product(\"gama_specz_subsample_sE\")"
+    "data = pz_server.get_product(\"gama_specz_subsample_sE\")"
    ]
   },
   {
@@ -452,10 +456,9 @@
     "tags": []
    },
    "source": [
-    "<div style=\"text-align: right\">  <a href=\"#contents\">back to the top</a> </div> \n",
     "<a class=\"anchor\" id=\"spec\"></a>\n",
-    "\n",
-    "### Spec-z Catalog "
+    "### Spec-z Catalog \n",
+    "<div style=\"text-align: right\">  <a href=\"#contents\">back to the top</a> </div> "
    ]
   },
   {
@@ -593,10 +596,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"text-align: right\">  <a href=\"#contents\">back to the top</a> </div> \n",
-    "\n",
     "<a class=\"anchor\" id=\"train\"></a>\n",
     "### Training Sets \n",
+    "<div style=\"text-align: right\">  <a href=\"#contents\">back to the top</a> </div> \n",
     "    \n",
     "In the context of the PZ Server, Training Sets are defined as the product of matching (spatially) a given Spec-z Catalog (single survey or compilation) to the photometric data, in this case, the LSST Objects Catalog. The PZ Server API offers a tool called _Training Set Maker_ for users to build customized Training Sets based on the Spec-z Catalogs available. Please see the companion Jupyter Notebook `pz_tsm_tutorial.ipynb` for details.   \n",
     "\n",
@@ -710,10 +712,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"text-align: right\">  <a href=\"#contents\">back to the top</a> </div> \n",
-    "\n",
     "<a class=\"anchor\" id=\"valid\"></a>\n",
     "### Photo-z Validation Results\n",
+    "<div style=\"text-align: right\">  <a href=\"#contents\">back to the top</a> </div> \n",
     "    \n",
     "Validation Results are the outputs of any photo-z algorithm applied on a Validation Set. The format and number of files of this data product are strongly dependent on the algorithm used to create it, so there are no constraints on these two parameters. In the case of multiple files, for instance, if the user includes the results of training procedures (e.g., neural nets weights, decision trees files, or any machine learning by-product) or additional files (SED templates, filter transmission curves, theoretical magnitudes grid, Bayesian priors, etc.), it will be required to put all files together in a single compressed file (.zip or .tar, or .tar.gz) before uploading it to the Photo-z Server.   \n",
     "\n",
@@ -776,10 +777,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"text-align: right\">  <a href=\"#contents\">back to the top</a> </div> \n",
-    "\n",
     "<a class=\"anchor\" id=\"pz_tables\"></a>\n",
-    "### Photo-z Tables "
+    "### Photo-z Tables \n",
+    "<div style=\"text-align: right\">  <a href=\"#contents\">back to the top</a> </div> "
    ]
   },
   {
@@ -808,9 +808,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "pz",
    "language": "python",
-   "name": "python3"
+   "name": "pz"
   },
   "language_info": {
    "codemirror_mode": {
