--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -30,10 +30,11 @@
     "    - [How to display the metadata of a data product](#metadata)\n",
     "    - [How to download data products as .zip files](#download-zip)  \n",
     "    - [How to retrieve contents of data products (work on memory)](#retrieve-contents)\n",
-    "        - [Spec-z Catalogs](#spec)\n",
-    "        - [Training Sets](#train)\n",
-    "        - [Photo-z Validation Results](#valid)\n",
-    "        - [Photo-z Tables](#pz_tables)"
+    "- Product types \n",
+    "    - [Spec-z Catalogs](#spec)\n",
+    "    - [Training Sets](#train)\n",
+    "    - [Photo-z Validation Results](#valid)\n",
+    "    - [Photo-z Tables](#pz_tables)"
    ]
   },
   {
@@ -155,15 +156,6 @@
    "outputs": [],
    "source": [
     "pz_server = PzServer(token=\"<paste your API Token here>\", host=\"pz-dev\") # temporary host for test phase  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pz_server = PzServer(token=\"1a08b1340c201c8f58c90e9fa9260effbd649439\", host=\"pz-dev\") # temporary host for test phase  "
    ]
   },
   {
@@ -334,22 +326,14 @@
    "source": [
     "The metadata of a given data product is the information provided by the user on the upload form. This information is attached to the data product contents and is available for consulting on the PZ Server page or using this Python API (`pz-server-lib`).\n",
     "\n",
-    "All data products stored on PZ Server are identified by a unique name, a _string_ called **internal_name**, which is created automatically at the moment of the upload by concatenating the product name given by its owner (and removing blank spaces, upper cases, and special charecters) to a randomly generated hash. \n",
-    "\n",
-    "One way to share a data product with othes PZ Server users is to provide the product's URL:\n",
-    "\n",
-    "https://pz-server.linea.org.br/product/<internal_name> \n",
-    "\n",
-    "or, if still in the development phase, \n",
-    "\n",
-    "https://pz-server-dev.linea.org.br/product/<internal_name> "
+    "All data products stored on PZ Server are identified by a unique **id** number or an unique name, a _string_ called **internal_name**, which is created automatically at the moment of the upload by concatenating the product **id** to the name given by its owner (replacing blank spaces by \"_\", lowering cases, and removing special characters). "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `PzServer`'s method `get_product_metadata()` returns a dictionary with the attibutes stored in the PZ Server about a given data product identified by its **internal_name**. For use in a Jupyter notebook, the equivalent `display_product_metadata()` shows the results in a formated table."
+    "The `PzServer`'s method `get_product_metadata()` returns a dictionary with the attibutes stored in the PZ Server about a given data product identified by its **id** or **internal_name**. For use in a Jupyter notebook, the equivalent `display_product_metadata()` shows the results in a formated table."
    ]
   },
   {
@@ -358,7 +342,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pz_server.display_product_metadata(<internal name (str)>) \n",
+    "# pz_server.display_product_metadata(<id (int or str) or internal_name (str)>) \n",
+    "#pz_server.display_product_metadata(6) \n",
+    "#pz_server.display_product_metadata(\"6\") \n",
     "pz_server.display_product_metadata(\"simple_training_set_Uch3wIA\") "
    ]
   },
@@ -366,17 +352,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As in the previous examples, to attribute the metadata of a data product (as a dictionary) to a variable, just replace the preffix \"display_\" by \"get_\", like this:  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "metadata_dic = pz_server.get_product_metadata(\"simple_training_set_Uch3wIA\") \n",
-    "metadata_dic"
+    "## Shareing data products URL\n",
+    "\n",
+    "One way to share a data product with othes PZ Server users is to provide the product's URL:\n",
+    "\n",
+    "https://pz-server.linea.org.br/product/ + **internal_name** \n",
+    "\n",
+    "or, if still in the development phase, \n",
+    "\n",
+    "https://pz-server-dev.linea.org.br/product/ + **internal_name**\n",
+    "\n",
+    "For instance: \n",
+    "\n",
+    "https://pz-server-dev.linea.org.br/product/gama_specz_subsample_sE-ki_Y\n",
+    "\n",
+    "<font color=red> WARNING:</font> The URL works only with the internal name, not with the **id** number. "
    ]
   },
   {
@@ -401,7 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.download_product(\"gama_specz_subsample_sE\", save_in=\".\")"
+    "pz_server.download_product(\"simple_training_set_Uch3wIA\", save_in=\".\")"
    ]
   },
   {
@@ -426,7 +416,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pz_server.get_product(\"gama_specz_subsample_sE\")"
+    "#data = pz_server.get_product(\"gama_specz_subsample_sE\")"
    ]
   },
   {
@@ -808,9 +798,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pz",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pz"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
