add instructions to download and share data products using URLs

--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -25,11 +25,13 @@
     "- PZ Server\n",
     "    - [Introduction](#intro) \n",
     "    - [How to upload a data product to the PZ Server](#upload)\n",
+    "    - [How to download a data product from the PZ Server](#download)\n",
     "- PZ Server API (Python library pz-server-lib)\n",
-    "    - [Get basic info from PZ Server](#basic-info)\n",
+    "    - [How to get general info from PZ Server](#general)\n",
     "    - [How to display the metadata of a data product](#metadata)\n",
     "    - [How to download data products as .zip files](#download-zip)  \n",
     "    - [How to retrieve contents of data products (work on memory)](#retrieve-contents)\n",
+    "    - [How to share data products with other RSP users](#share)\n",
     "- Product types \n",
     "    - [Spec-z Catalogs](#spec)\n",
     "    - [Training Sets](#train)\n",
@@ -64,17 +66,28 @@
    "metadata": {},
    "source": [
     "<a class=\"anchor\" id=\"upload\"></a>\n",
-    "### How to upload a data product to the PZ Server\n",
+    "## How to upload a data product to the PZ Server\n",
     "<div style=\"text-align: right\"><a href=\"#contents\">back to the top</a></div> \n",
     "\n",
     "To upload a data product, click on the button **NEW PRODUCT** on the top left of the **User-generated Data Products** page and fill in the Upload Form with relevant metadata.\n",
     "\n",
-    "The photo-z-related products are organized into five categories (product types):\n",
+    "The photo-z-related products are organized into four categories (product types):\n",
     "\n",
     "- **Spec-z Catalog:** Catalog of spectroscopic redshifts and positions (usually equatorial coordinates).\n",
     "- **Training Set:** Training set for photo-z algorithms (tabular data). It usually contains magnitudes, errors, and true redshifts.\n",
     "- **Photo-z Validation Results:** Results of a photo-z validation procedure (free format). Usually contains photo-z estimates (single estimates and/or pdf) of a validation set, photo-z validation metrics, validation plots, etc.\n",
     "- **Photo-z Table:** Results of a photo-z estimation procedure. Ideally in the same format as the photo-z tables delivered by the DM as part of the LSST data releases. If the data is larger than the file upload limit (200MB), the product entry stores only the metadata (and instructions on accessing the data should be provided in the description field)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a class=\"anchor\" id=\"download\"></a>\n",
+    "## How to download a data product from the PZ Server\n",
+    "<div style=\"text-align: right\"><a href=\"#contents\">back to the top</a></div> \n",
+    "\n",
+    "To download a data product available on the Photo-z Server, go to one of the two pages by clicking on the card \"LSST PZ Data Products\" (for official products released by LSST DM Team) or \"User-generated Data Products\" (for products uploaded by the members of LSST community. The download button is on the left side of each data product (each row of the list). "
    ]
   },
   {
@@ -159,11 +172,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pz_server = PzServer(token=\"1a08b1340c201c8f58c90e9fa9260effbd649439\", host=\"pz-dev\") # temporary host for test phase  "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a class=\"anchor\" id=\"basic-info\"></a>\n",
-    "## Get basic info from PZ Server\n",
+    "<a class=\"anchor\" id=\"general\"></a>\n",
+    "## How to get general info from PZ Server\n",
     "<div style=\"text-align: right\"> <a href=\"#contents\">back to the top</a> </div> "
    ]
   },
@@ -352,27 +374,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Shareing data products URL\n",
-    "\n",
-    "One way to share a data product with othes PZ Server users is to provide the product's URL:\n",
-    "\n",
-    "https://pz-server.linea.org.br/product/ + **internal_name** \n",
-    "\n",
-    "or, if still in the development phase, \n",
-    "\n",
-    "https://pz-server-dev.linea.org.br/product/ + **internal_name**\n",
-    "\n",
-    "For instance: \n",
-    "\n",
-    "https://pz-server-dev.linea.org.br/product/gama_specz_subsample_sE-ki_Y\n",
-    "\n",
-    "<font color=red> WARNING:</font> The URL works only with the internal name, not with the **id** number. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a class=\"anchor\" id=\"download-zip\"></a>\n",
     "## How to download data products as .zip files\n",
     "<div style=\"text-align: right\">  <a href=\"#contents\">back to the top</a> </div>     "
@@ -417,6 +418,31 @@
    "outputs": [],
    "source": [
     "#data = pz_server.get_product(\"gama_specz_subsample_sE\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a class=\"anchor\" id=\"share\"></a>\n",
+    "## How to share data products with other RSP users\n",
+    "<div style=\"text-align: right\"> <a href=\"#contents\">back to the top</a> </div>  \n",
+    "\n",
+    "All data products uploaded to the PZ Server are imediately available and visible to all PZ Server users (people with RSP credentials) through the PZ Server website or via the API. Besides informing the product **id** or **internal_name** fpr programatic access, another way to share a data product is providing the product's URL, which is composed by the website address + \"/products/\" + **internal_name**:\n",
+    "\n",
+    "https://pz-server.linea.org.br/product/ + **internal_name** \n",
+    "\n",
+    "or, if still in the development phase, \n",
+    "\n",
+    "https://pz-server-dev.linea.org.br/product/ + **internal_name**\n",
+    "\n",
+    "The product's URL leads to the download page.  \n",
+    "\n",
+    "For instance: \n",
+    "\n",
+    "https://pz-server-dev.linea.org.br/product/gama_specz_subsample_sE-ki_Y\n",
+    "\n",
+    "<font color=red> WARNING:</font> The URL works only with the internal name, **not** with the **id** number. "
    ]
   },
   {
