close #32. Dowload functions refactored.

--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -46,7 +46,7 @@
    },
    "source": [
     "<a class=\"anchor\" id=\"intro\"></a>\n",
-    "# PZ Server\n",
+    "# The PZ Server\n",
     "## Introduction \n"
    ]
   },
@@ -172,15 +172,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pz_server = PzServer(token=\"1a08b1340c201c8f58c90e9fa9260effbd649439\", host=\"pz-dev\") # temporary host for test phase  "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -244,7 +235,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### Data products \n",
+    "\n",
     "Display all data products available (WARNING: this list can rapdly grow during the survey's operation). "
    ]
   },
@@ -392,7 +383,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.download_product(\"simple_training_set_Uch3wIA\", save_in=\".\")"
+    "%%time\n",
+    "pz_server.download_product(6, save_in=\".\")"
    ]
   },
   {
@@ -417,7 +409,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#data = pz_server.get_product(\"gama_specz_subsample_sE\")"
+    "%%time\n",
+    "dataframe = pz_server.get_product(6)\n",
+    "dataframe"
    ]
   },
   {
@@ -452,9 +446,11 @@
     "<div style=\"text-align: right\"> <a href=\"#contents\">back to the top</a> </div> \n",
     "<a class=\"anchor\" id=\"prod-types\"></a>\n",
     "\n",
-    "## Product types\n",
+    "# Product types \n",
     "\n",
-    "The PZ Server API provides Python classes with useful methods to handle particular product types.  "
+    "<font color=red> WARNING: SECTION UNDER CONSTRUCTION</font> \n",
+    "\n",
+    "The PZ Server API provides Python classes with useful methods to handle particular product types. Let's recap the product types available:   "
    ]
   },
   {
@@ -473,7 +469,7 @@
    },
    "source": [
     "<a class=\"anchor\" id=\"spec\"></a>\n",
-    "### Spec-z Catalog \n",
+    "## Spec-z Catalog \n",
     "<div style=\"text-align: right\">  <a href=\"#contents\">back to the top</a> </div> "
    ]
   },
@@ -613,7 +609,7 @@
    "metadata": {},
    "source": [
     "<a class=\"anchor\" id=\"train\"></a>\n",
-    "### Training Sets \n",
+    "## Training Sets \n",
     "<div style=\"text-align: right\">  <a href=\"#contents\">back to the top</a> </div> \n",
     "    \n",
     "In the context of the PZ Server, Training Sets are defined as the product of matching (spatially) a given Spec-z Catalog (single survey or compilation) to the photometric data, in this case, the LSST Objects Catalog. The PZ Server API offers a tool called _Training Set Maker_ for users to build customized Training Sets based on the Spec-z Catalogs available. Please see the companion Jupyter Notebook `pz_tsm_tutorial.ipynb` for details.   \n",
@@ -729,7 +725,7 @@
    "metadata": {},
    "source": [
     "<a class=\"anchor\" id=\"valid\"></a>\n",
-    "### Photo-z Validation Results\n",
+    "## Photo-z Validation Results\n",
     "<div style=\"text-align: right\">  <a href=\"#contents\">back to the top</a> </div> \n",
     "    \n",
     "Validation Results are the outputs of any photo-z algorithm applied on a Validation Set. The format and number of files of this data product are strongly dependent on the algorithm used to create it, so there are no constraints on these two parameters. In the case of multiple files, for instance, if the user includes the results of training procedures (e.g., neural nets weights, decision trees files, or any machine learning by-product) or additional files (SED templates, filter transmission curves, theoretical magnitudes grid, Bayesian priors, etc.), it will be required to put all files together in a single compressed file (.zip or .tar, or .tar.gz) before uploading it to the Photo-z Server.   \n",
