Update section about sharing data products

--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -415,18 +415,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The default format for `get_product()` output is a Pandas DataFrame object (`fmt=\"pandas\"`). It is also possible to retrieve the table as an Astropy Table by passung the argument `fmt=\"astropy\"`.    "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%time\n",
+    "dataframe = pz_server.get_product(6, fmt=\"astropy\")\n",
+    "dataframe"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -436,7 +440,7 @@
     "## How to share data products with other RSP users\n",
     "<div style=\"text-align: right\"> <a href=\"#contents\">back to the top</a> </div>  \n",
     "\n",
-    "All data products uploaded to the PZ Server are imediately available and visible to all PZ Server users (people with RSP credentials) through the PZ Server website or via the API. Besides informing the product **id** or **internal_name** fpr programatic access, another way to share a data product is providing the product's URL, which is composed by the website address + \"/products/\" + **internal_name**:\n",
+    "All data products uploaded to the PZ Server are imediately available and visible to all PZ Server users (people with RSP credentials) through the PZ Server website or via the API. Besides informing the product **id** or **internal_name** for programatic access, another way to share a data product is providing the product's URL, which leads to the product's download page. The URL is composed by the PZ Server website address + **/products/** + **internal_name**:\n",
     "\n",
     "https://pz-server.linea.org.br/product/ + **internal_name** \n",
     "\n",
@@ -444,11 +448,10 @@
     "\n",
     "https://pz-server-dev.linea.org.br/product/ + **internal_name**\n",
     "\n",
-    "The product's URL leads to the download page.  \n",
     "\n",
-    "For instance: \n",
+    "For example: \n",
     "\n",
-    "https://pz-server-dev.linea.org.br/product/gama_specz_subsample_sE-ki_Y\n",
+    "https://pz-server-dev.linea.org.br/product/6_simple_training_set\n",
     "\n",
     "<font color=red> WARNING:</font> The URL works only with the internal name, **not** with the **id** number. "
    ]
